# nexus-rust

./: Cargo.toml  README.md
bar/: README.md
bar/src/: lib.rs
day1/src/: main.rs
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs  simple_state_machine.rs
hello-world/src/: main.rs
hello-world/src/utils/: cast.rs  mod.rs  say.rs
