[workspace]
resolver = "2"
members = [
    "bar",
    "day1", 
    "day2", "day3", "day4", "day5",
    "hello-world",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/nexus-rust"
description = "Nexus Rust workspace"
